[project]
name = "bead-trackers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cameras", "cupy", "numpy==2.2.0", "pytest>=8.4.0"]

[tool.uv.sources]
cupy = { path = "../cupy" }
cameras = { path = "../cameras/python/cameras" }
# cameras = { path = "../cameras/python/cameras" }
# cameras = { git = "https://github.com/Aemulation/cameras.git", subdirectory = "python" }

[dependency-groups]
dev = [
    "cameras",
 "matplotlib>=3.10.3",
 "pyqt6>=6.9.1",
 "tk>=0.1.0",
]
